--- a/apps/backend/requirements.txt
+++ b/apps/backend/requirements.txt
@@ -12,6 +12,7 @@ psycopg2-binary==2.9.9
 python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
+itsdangerous==2.1.2
 
 # HTTP Client (for OAuth validation)
 httpx==0.26.0
