--- a/apps/backend/requirements.txt
+++ b/apps/backend/requirements.txt
@@ -29,6 +29,15 @@ sqladmin==0.16.0
 # Redis
 redis==5.0.1
 
+# Rate Limiting
+slowapi==0.1.9
+
+# Logging
+structlog==24.1.0
+
+# Monitoring
+prometheus-client==0.19.0
+
 # Validation
 pydantic==2.5.3
 pydantic-settings==2.1.0
