feat(mobile): Phase 3 - Microphone permissions and recorder service (M035-M036)
Completed Listen-and-Repeat infrastructure:

**Microphone Permissions (M035):**
- Android (AndroidManifest.xml):
  - RECORD_AUDIO permission for microphone access
  - INTERNET permission for API uploads
- iOS (Info.plist):
  - NSMicrophoneUsageDescription with user-friendly message
  - NSSpeechRecognitionUsageDescription for speech recognition

**AudioRecorderService (M036):**
- Memory-first recording with immediate cleanup
- Recording configuration:
  - Encoder: AAC-LC (widely supported)
  - Bit rate: 64kbps (quality/size balance)
  - Sample rate: 16kHz (optimal for speech recognition)
- Permission handling:
  - hasPermission() check before recording
  - User-friendly permission error messages
- Recording controls:
  - startRecording() with permission validation
  - stopRecording() returns Uint8List bytes
  - cancelRecording() without saving
  - pause/resumeRecording() for user control
- Buffer management:
  - 10MB maximum buffer size enforced
  - getBufferSize() and getBufferSizeMB() helpers
  - isBufferOverLimit() validation
  - Automatic file cleanup after reading
- Memory-only behavior:
  - Records to temp file (record package limitation)
  - Immediately reads bytes into memory
  - Deletes temp file instantly
  - Never exposes file paths to caller
- Error handling:
  - AudioRecorderException for all failures
  - Automatic cleanup on errors
  - Safe disposal with recording check

**Key Features:**
- No persistent file storage (immediate cleanup)
- 10MB limit prevents excessive recordings (~2 min at 64kbps)
- Permission checks before every recording
- Comprehensive error messages for user feedback
- Safe resource cleanup in dispose()

**Technical Details:**
- Uses record package (5.1.2) for cross-platform support
- dart:io for file operations (mobile only)
- Uint8List for binary data handling
- Proper cleanup on cancellation and errors

Files updated: 2 permission files
- AndroidManif

--- a/apps/mobile/ios/Runner/Info.plist
+++ b/apps/mobile/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to your microphone to record your pronunciation for evaluation.</string>
+	<key>NSSpeechRecognitionUsageDescription</key>
+	<string>This app needs speech recognition to evaluate your English pronunciation.</string>
 </dict>
 </plist>
