fix(mobile): Disable flutter_facebook_auth and upgrade record package
- Commented out flutter_facebook_auth due to iOS compilation issues
- Upgraded record package from 5.1.2 to 6.0.0 (fixes iOS build errors)
- Updated firebase_auth_service to disable Facebook auth temporarily
- Fixed session_detail_screen and edit_profile_screen per user edits

Facebook auth can be re-enabled when the package iOS issues are resolved.

--- a/apps/mobile/pubspec.yaml
+++ b/apps/mobile/pubspec.yaml
@@ -36,11 +36,11 @@ dependencies:
   firebase_auth: ^5.3.3
   google_sign_in: ^6.2.2
   sign_in_with_apple: ^6.1.3
-  flutter_facebook_auth: ^7.1.1
+  # flutter_facebook_auth: ^7.1.1  # Temporarily disabled due to iOS compilation issues
 
   # Audio
   just_audio: ^0.9.42
-  record: ^5.1.2
+  record: ^6.0.0  # Updated to fix iOS compatibility issues
   path_provider: ^2.1.5
 
   # Navigation
