--- a/apps/backend/requirements.txt
+++ b/apps/backend/requirements.txt
@@ -7,6 +7,7 @@ python-multipart==0.0.6
 sqlalchemy==2.0.25
 alembic==1.13.1
 psycopg2-binary==2.9.9
+asyncpg==0.31.0
 
 # Authentication & Security
 python-jose[cryptography]==3.3.0
